@@ -1,3 +1,9 @@
+2016-12-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/78408
+	* gcc.dg/pr78408-1.c: New test.
+	* gcc.dg/pr78408-2.c: New test.
+
 2016-12-16  Marek Polacek  <polacek@redhat.com>
 
 	PR tree-optimization/78819
